<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/bungee"
        android:textColor="@color/teal_700"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reset_email"
        android:layout_width="356dp"
        android:layout_height="46dp"

        android:layout_marginStart="22dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/dialog_shape"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:padding="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="186dp"
        android:layout_height="41dp"
        android:layout_below="@id/reset_email"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="418dp"
        android:background="@drawable/button_shape"

        android:fontFamily="@font/bungee"
        android:text="@string/reset"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_email"
        app:layout_constraintVertical_bias="0.508" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="329dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_reset"
        app:layout_constraintTop_toBottomOf="@+id/reset_email" />


</androidx.constraintlayout.widget.ConstraintLayout>